Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85165

Sentence misspelling in qtdeclarative translation file

    XMLWordPrintable

Details

    • All
    • c9cfca06d6ed9ecb4e4873f68b966af5ad10b95f (qt/qtdeclarative/dev) 8e38e162f803687cf507f7a4a33a362adbfd7460 (qt/qtdeclarative/5.15)

    Description

      While translating Qtdeclarative into my language, I found that a source string was misspelled. 

      This is "Cannot connect mismatched signal/slot %1 %vs. %2"

      I don't know what "%vs." means, it's probably a typo. Therefore, I could not translate the string into my language.

      It is located in the qqmlobjectcreator.cpp file:

      https://codereview.qt-project.org/gitweb?p=qt/qtdeclarative.git;a=blob;f=src/qml/qml/qqmlobjectcreator.cpp;hb=1a7457e03381e217f1242bce49b86cd0e06bd65f#l1031

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            liaqi Liang Qi
            yasarciv Yaşar Çiv
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes