qqmlobjectcreator: Fix a typo in translation string

Fixes: QTBUG-85165
Change-Id: I052e97be398791f54f6b5c106ffe364f3457359a
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit c9cfca06d6ed9ecb4e4873f68b966af5ad10b95f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>